# name: TestFeatureFlagMatcher.test_multiple_flags
  '
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.1
  '
  SELECT (("posthog_person"."properties" -> 'email') = '"test@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.2
  '
  SELECT (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'group_key'
         AND "posthog_group"."group_type_index" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.3
  '
  SELECT (("posthog_group"."group_properties" -> 'name') IN ('"foo.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0",
         (("posthog_group"."group_properties" -> 'name') IN ('"foo2.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'foo'
         AND "posthog_group"."group_type_index" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.4
  '
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.5
  '
  SELECT (("posthog_person"."properties" -> 'email') = '"test@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.6
  '
  SELECT (("posthog_group"."group_properties" -> 'name') IN ('"foo.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0",
         (("posthog_group"."group_properties" -> 'name') IN ('"foo2.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'foo2'
         AND "posthog_group"."group_type_index" = 2)
  '
---
